--- a/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.html
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.html
@@ -110,11 +110,11 @@ on your computer to complete this tutorial.</p>
 </ul>
 <h3 id="download-data">Download Data</h3>
 <p>Data required for this tutorial will be downloaded using <code>neonUtilities</code> in the lesson.</p>
-<p>The LiDAR and imagery data used to create this raster teaching data set
-were collected over the <a href="https://www.neonscience.org/" target="_blank"> National Ecological Observatory Network’s</a>
-<a href="https://www.neonscience.org/field-sites/HARV" target="_blank" >Harvard Forest (HARV)</a> and
-<a href="https://www.neonscience.org/field-sites/SJER" target="_blank" >San Joaquin Experimental Range (SJER)</a>
-field sites and processed at NEON headquarters. The entire dataset can be accessed from the
+<p>The LiDAR and imagery data used in this lesson were collected over the
+<a href="https://www.neonscience.org/" target="_blank"> National Ecological Observatory Network’s</a>
+<a href="https://www.neonscience.org/field-sites/HARV" target="_blank" >Harvard Forest (HARV)</a>
+field site.</p>
+<p>The entire dataset can be accessed from the
 <a href="http://data.neonscience.org" target="_blank">NEON Data Portal</a>.</p>
 <hr />
 <p><strong>Set Working Directory:</strong> This lesson will explain how to set the working directory. You may wish to set your working directory to some other location, depending on how you prefer to organize your data.</p>
@@ -123,7 +123,7 @@ of setting the working directory in R can be found here.</a></p>
 <hr />
 <ul>
 <li>
-<a href="https://cran.r-project.org/web/packages/terra/terra.pdff" target="_blank">
+<a href="https://cran.r-project.org/web/packages/terra/terra.pdf" target="_blank">
 </li>
 </ul>
 <p>Read more about the <code>terra</code> package in R.</a></p>
