fix old reference to raster package, replace with terra

--- a/tutorials/R/AOP/Hyperspectral/Select-Pixels-Compare-Spectral-Signatures/Select-Pixels-Compare-Spectral-Signatures.html
+++ b/tutorials/R/AOP/Hyperspectral/Select-Pixels-Compare-Spectral-Signatures/Select-Pixels-Compare-Spectral-Signatures.html
@@ -81,15 +81,15 @@ section.footnotes::before {
 </div>
 <div class="body">
 <p>In this tutorial, we will learn how to plot spectral signatures of several
-different land cover types using an interactive clicking feature of the
-<code>raster</code> package.</p>
+different land cover types using an interactive <code>click</code> feature of the
+<code>terra</code> package.</p>
 <div id="ds-objectives" markdown="1">
 <h2 id="learning-objectives">Learning Objectives</h2>
 <p>After completing this activity, you will be able to:</p>
 <ul>
 <li>Extract and plot spectra from an HDF5 file.</li>
 <li>Work with groups and datasets within an HDF5 file.</li>
-<li>Use the <code>raster::click()</code> function to interact with an RGB raster image</li>
+<li>Use the <code>terra::click()</code> function to interact with an RGB raster image</li>
 </ul>
 <h2 id="things-you-ll-need-to-complete-this-tutorial">Things You’ll Need To Complete This Tutorial</h2>
 <p>To complete this tutorial you will need the most current version of R and,
