cast to numeric to fix plots

--- a/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.html
+++ b/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.html
@@ -189,16 +189,13 @@ head(spectra_merge[c(&quot;spectralSampleID&quot;,&quot;taxonID&quot;,&quot;scie
 <blockquote>
 <p>“Spectral reflectance of both the front and back of the sample is measured against a reflective white spectralon reference panel. A black spectralon reference is then measured, followed by spectral transmittance measurements of the front and back of the sample. Reference measurements of the white reference are taken between each leaf measurement.”</p>
 </blockquote>
-<p>When linking with NEON’s airborne spectral dataset (DP3.30006.001), the <code>top of foliage (sunward) on black reference</code> is what we want to use. For this lesson, we will just focus on this reflectance condition. Let’s take a look at the spectra for the single csv we read in:</p>
+<p>When linking with NEON’s airborne spectral dataset (DP3.30006.001), the <code>top of foliage (sunward) on black reference</code> is the condition that we want to use. For this lesson, we will just focus on this reflectance condition. Let’s take a look at the spectra for the single csv we read in. Note that you’ll need to cast the wavelength and reflectance data to “numeric” data type, using <code>as.numeric</code>.</p>
 <pre><code>refl_conditions_plot &lt;- ggplot(FSP_RMNP_20200706_2043,             
-               aes(x = wavelength, 
-                   y = reflectance, 
+               aes(x = as.numeric(wavelength), 
+                   y = as.numeric(reflectance), 
                    color = reflectanceCondition)) + geom_line() 
 
-print(refl_conditions_plot + ggtitle(&quot;FSP_RMNP_20200706_2043 - all reflectance conditions&quot;))
-
-## `geom_line()`: Each group consists of only one observation.
-## ℹ Do you need to adjust the group aesthetic?
+print(refl_conditions_plot + ggtitle(&quot;FSP_RMNP_20200706_2043 - all reflectance conditions&quot;) + xlab(&quot;wavelength (nm)&quot;) + ylab(&quot;reflectance&quot;))
 </code></pre>
 <div class="figure" style="text-align: center">
 <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AOP/Hyperspectral/Field-Spectra/rfigs/plot-reflectance-conditions-1.png" alt=" "  />
@@ -210,13 +207,10 @@ print(refl_conditions_plot + ggtitle(&quot;FSP_RMNP_20200706_2043 - all reflecta
 
 
 spectra_plot &lt;- ggplot(FSP_RMNP_20200706_2043_REFL,
-                       aes(x = wavelength, 
-                           y = reflectance)) + geom_line() 
+                       aes(x = as.numeric(wavelength), 
+                           y = as.numeric(reflectance))) + geom_line() 
 
-print(spectra_plot + ggtitle(&quot;FSP_RMNP_20200706_2043_REFL - Top of Foliage on Black Reference&quot;))
-
-## `geom_line()`: Each group consists of only one observation.
-## ℹ Do you need to adjust the group aesthetic?
+print(spectra_plot + ggtitle(&quot;FSP_RMNP_20200706_2043_REFL - Top of Foliage on Black Reference&quot;) + xlab(&quot;wavelength (nm)&quot;) + ylab(&quot;reflectance&quot;))
 </code></pre>
 <div class="figure" style="text-align: center">
 <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AOP/Hyperspectral/Field-Spectra/rfigs/plot-single-spectra-1.png" alt=" "  />
@@ -237,7 +231,9 @@ for (i in 1:nrow(spectra_merge)) {
 
 # get the wavelength values corresponding to the subset we selected for each of the spectra
 
-wavelengths &lt;- as.numeric(refl_data[which(refl_data$reflectanceCondition == &quot;top of foliage (sunward) on black reference&quot;), c(&quot;wavelength&quot;)])
+wavelengths &lt;- refl_data[which(refl_data$reflectanceCondition == &quot;top of foliage (sunward) on black reference&quot;), c(&quot;wavelength&quot;)]
+
+wavelengths &lt;- as.numeric(wavelengths)
 
 spectra_df &lt;- as.data.frame(do.call(cbind, spectra_list)) # make a new dataframe from the spectra_list
 
